# merge_pdf

./: .env.example  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/pdf/: merger.rs  mod.rs
src/components/: ActionBar.tsx  FileList.tsx  OutputSettings.tsx  ProgressBar.tsx  StatusBar.tsx
src/hooks/: usePdfMerger.ts
src/styles/: global.css
src/types/: index.ts
